editado el h2 final

--- a/pages/mision.html
+++ b/pages/mision.html
@@ -39,7 +39,7 @@
     </section>
     <section class="section-end_mision">
         <div class="container">
-            <h2>Y como continuará</h2>
+            <h2 class="end-h2">Y como continuará</h2>
             <p class="end-body body2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, natus laborum voluptatibus recusandae earum vel quasi expedita nobis ratione ab assumenda culpa, laudantium, dolor quod! Expedita harum ipsum eveniet consequuntur.<br><br> Lorem
                 ipsum dolor sit amet consectetur adipisicing elit. Laboriosam asperiores exercitationem aliquam reprehenderit quis! Consequatur eaque exercitationem earum hic nisi, ipsum, amet in, quae dolore repellendus consectetur tempore odit.</p>
         </div>
