--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Inicio - Patas Creativas</title>
+    <meta name="description" content="Sabemos lo complicado que es poder distinguirte del resto, por eso creamos elementos de branding modulares para que puedas usarlos como y donde quieras.">
+    <meta name="keywords" content="ilustración, iconografía, branding, servicios">
+    <meta name="author" content="Pedro de Ibarlucea">
+    <meta name="copyright" content="Patas Creativas">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pdi-ds.github.io/coderhouse_patas-creativas-sass/">
 </head>
 
 <body>
@@ -35,7 +41,7 @@
             <div class="hero-content_wrapper">
                 <div class="hero-text_wrapper">
                     <h1 class="hero-h1">Crea y diseña la identidad perfecta para tú refugio</h1>
-                    <div class="hero-p body1">Tristique mauris nunc vitae volutpat at. Vitae lorem fermentum, senectus in ultrices sit arcu. At sapien praesent vulputate ultrices.</div>
+                    <div class="hero-p body1">Sabemos lo complicado que es poder distinguirte del resto, por eso creamos elementos de branding modulares para que puedas usarlos como y donde quieras.</div>
                     <div class="hero-buttons_wrapper">
                         <a href="#" class="button cta-1">Descarga</a>
                         <a href="#" class="button cta-2">Saber más</a>
@@ -81,59 +87,59 @@
                 <!--Inicio del "carrusel"-->
                 <div class="review-card_wrapper">
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"Me gustaría agradecerle personalmente por su excelente producto. Pruebenlo ahora. Estoy muy satisfecho con mis diseños"</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_1.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Alvin Pelayo</p>
                         </div>
                     </div>
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"Hombre, esto está mejorando cada vez más a medida que aprendo más al respecto".</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_2.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Laura Naranjo Menéndez</p>
                         </div>
                     </div>
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"Patas Creativas debería estar nominada a servicio del año. No te arrepentirás".</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_3.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Rosalie Quiroz</p>
                         </div>
                     </div>
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"Realmente me ahorra tiempo y esfuerzo. Patas Creativas es exactamente lo que le faltaba a nuestro negocio".</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_4.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Naroa Carmona Mondragón</p>
                         </div>
                     </div>
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"El servicio fue excelente. ¡Patas Creativas es el verdadero negocio! No sé qué más decir".</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_3.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Manila Montemayor</p>
                         </div>
                     </div>
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"No siempre aplaudo, pero cuando lo hago, es gracias a Patas Creativas. Patas Creativas es el recurso comercial más valioso que hemos utilizádo JAMÁS. Es simplemente increíble".</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_5.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Canan Carvajal</p>
                         </div>
                     </div>
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"Con mucho gusto pagaría más de 600 dólares por Patas Creativas. No puedo decir lo suficiente sobre esta compañía".</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_6.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Abby Zaragoza</p>
                         </div>
                     </div>
                     <div class="review-card_item">
-                        <p class="review-text body2">Dignissim in bibendum fringilla mi etiam. Donec eu, venenatis volutpat nec, turpis. Neque, amet nislmi massa. Morbi tempus ut faucibus nunc.</p>
+                        <p class="review-text body2">"Es exactamente lo que estaba buscando. Sigan con el excelente trabajo".</p>
                         <div class="review-person_wrapper">
                             <img src="./img/pf_1.jpg" alt="this person does not exist" class="review-img">
-                            <p class="caption">Dignissim in</p>
+                            <p class="caption">Cornelio Limón Hernández</p>
                         </div>
                     </div>
                 </div>
