--- a/pages/mision.html
+++ b/pages/mision.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Misión - Patas Creativas</title>
+    <meta name="description" content="Conoce nuestra historia desde el inicio y todo el por venir que tanto esperámos.">
+    <meta name="keywords" content="ilustración, iconografía, branding, historia">
+    <meta name="author" content="Pedro de Ibarlucea">
+    <meta name="copyright" content="Patas Creativas">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pdi-ds.github.io/coderhouse_patas-creativas-sass/">
 </head>
 
 <body>
@@ -33,8 +39,8 @@
     <section class="section-start_mision">
         <div class="container">
             <h2 class="start-h2">Desde que nuestro proyecto empezó</h2>
-            <p class="start-body body2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia necessitatibus consequatur repellat, minima vero esse aut <b> impedit sit nostrum autem tempora voluptatibus? Quos voluptas, debitis illum minus sapiente adipisci.</b> Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Laboriosam illum, aliquam reiciendis officiis odio possimus voluptatum ipsa quis dicta asperiores sapiente sed dolores vel explicabo eius nisi? Vitae, laboriosam!</p>
+            <p class="start-body body2">Patas creativas vio la luz con la ayuda de dos jovenes diseñadores, ellos son amantes de los animales y vieron que muchos de los refugios que seguían les faltaba algo, una identidad visual de calidad. Por eso es que se juntaron y decidieron
+                crear Patas Creativas, un conjunto de elementos visuales modulares que ayudarán a varios refugios en crear su identidad perfecta.</p>
         </div>
     </section>
     <section class="section-end_mision">
