--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Servicios - Patas Creativas</title>
+    <meta name="description" content="Sabemos lo complicado que es poder distinguirte del resto, por eso creamos elementos de branding modulares para que puedas usarlos como y donde quieras.">
+    <meta name="keywords" content="ilustración, iconografía, branding, servicios">
+    <meta name="author" content="Pedro de Ibarlucea">
+    <meta name="copyright" content="Patas Creativas">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pdi-ds.github.io/coderhouse_patas-creativas-sass/">
 </head>
 
 <body>
@@ -38,34 +44,26 @@
                 <div class="servicios-card_item">
                     <div class="servicios-card_text">
                         <h5>Branding</h5>
-                        <p class="body2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quo ratione blanditiis consequatur recusandae voluptas reprehenderit repudiandae delectus esse odio nulla ut nihil unde iusto, quam, commodi id necessitatibus adipisci!</p>
-                        <a href="contacto.html" class="button" style="margin-top: 15px;">¡Quiero unirme</a>
+                        <p class="body2">No solo creas un logo, diseñarás marcas con personalidad e historia. Esto se apoya en el enfoque estratégico impulsado por el diseño, para crear conexiones entre el público y usted.</p>
+                        <a href="contacto.html" class="button" style="margin-top: 15px;">¡Quiero unirme!</a>
                     </div>
                     <img src="../img/services_branding.jpg" alt="castor servicios branding" class="servicios-img">
                 </div>
                 <div class="servicios-card_item">
                     <div class="servicios-card_text">
                         <h5>Iconografía</h5>
-                        <p class="body2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quo ratione blanditiis consequatur recusandae voluptas reprehenderit repudiandae delectus esse odio nulla ut nihil unde iusto, quam, commodi id necessitatibus adipisci!</p>
-                        <a href="contacto.html" class="button" style="margin-top: 15px;">¡Quiero unirme</a>
+                        <p class="body2">Sabemos que las redes sociales son un pilar fundamental en el desarrollo de una marca. Te ayudamos a ser reconocido sea donde sea que te encuentres.</p>
+                        <a href="contacto.html" class="button" style="margin-top: 15px;">¡Quiero unirme!</a>
                     </div>
                     <img src="../img/services_icon.jpg" alt="castor servicios branding" class="servicios-img">
                 </div>
                 <div class="servicios-card_item">
                     <div class="servicios-card_text">
                         <h5>Ilustraciones</h5>
-                        <p class="body2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quo ratione blanditiis consequatur recusandae voluptas reprehenderit repudiandae delectus esse odio nulla ut nihil unde iusto, quam, commodi id necessitatibus adipisci!</p>
-                        <a href="contacto.html" class="button" style="margin-top: 15px;">¡Quiero unirme</a>
+                        <p class="body2">Trabajar orientados en el público va primero, es por eso que te centrarás en la esencia de tu marca para crear experiencias de alto impacto.</p>
+                        <a href="contacto.html" class="button" style="margin-top: 15px;">¡Quiero unirme!</a>
                     </div>
                     <img src="../img/services_illustration.jpg" alt="castor servicios branding" class="servicios-img">
-                </div>
-                <div class="servicios-card_item">
-                    <div class="servicios-card_text">
-                        <h5>Animaciones</h5>
-                        <p class="body2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quo ratione blanditiis consequatur recusandae voluptas reprehenderit repudiandae delectus esse odio nulla ut nihil unde iusto, quam, commodi id necessitatibus adipisci!</p>
-                        <a href="contacto.html" class="button" style="margin-top: 15px;">¡Quiero unirme</a>
-                    </div>
-                    <iframe src="https://cdn.dribbble.com/users/824641/screenshots/17419991/media/3b3982b6500fab0071b7d780ff48dbc3.mp4" frameborder="0" class="servicios-img"></iframe>
                 </div>
             </div>
         </div>
