--- a/pages/muestras.html
+++ b/pages/muestras.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Servicios - Patas Creativas</title>
+    <meta name="description" content="Conoce nuestra historia desde el inicio y todo el por venir que tanto esperámos.">
+    <meta name="keywords" content="ilustración, iconografía, branding, historia">
+    <meta name="author" content="Pedro de Ibarlucea">
+    <meta name="copyright" content="Patas Creativas">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pdi-ds.github.io/coderhouse_patas-creativas-sass/">
 </head>
 
 <body>
